modules/k8s/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app: prometheus-server
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: 
  name: grafana-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: grafana
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: 
  name: alertmanager-service
spec:
  ports:
  - port: 9100
    targetPort: 9100
    protocol: TCP
  selector:
    app: node-exporter
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata: 
  name: alertmanager-service
spec:
  ports:
  - port: 9093
    targetPort: 9093
    protocol: TCP
  selector:
    app: alertmanager
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: prome-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: prome.thunderclouds.store
    http:
      paths:
      - backend:
          service:
            name: prometheus-service
            port:
              number: 9090
        path: /
        pathType: Prefix
      - backend:
          service:
            name: grafana-service
            port:
              number: 3000
        path: /path
        pathType: Prefix
      - backend:
          service:
            name: alertmanager-service
            port:
              number: 9093
        path: /path
        pathType: Prefix
